[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['application']
description = 'A Rust Application'
documentation = 'https://docs.rs/cfg-rs/'
edition = "2018"
homepage = 'https://github.com/leptonyu/cfg-rs'
keywords = [
  'application',
]
license = 'MIT'
name = "app-rs"
readme = 'README.md'
repository = 'https://github.com/leptonyu/cfg-rs'
version = "0.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  '--cfg',
  'docsrs',
]

[package.metadata.playground]
all-features = true

[dependencies]
cfg-rs = {version = "^0.2.8", features = ["rand"]}

[dev-dependencies]
criterion = '0.4'
rand_core = '0.6'

[[bench]]
harness = false
name = "core"
